tests/checker/good/one_accept.scilla
contract OneAccept
()

transition donate()
  accept
end
