tests/checker/bad/bad_param.scilla
scilla_version 0

contract BadParam (_creation_block : BNum)

transition Dummy ()

end
